<resources>
    <string name="app_name">Bitotsav</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="register">Register</string>
    <string name="contact_us_sponsors_about_us">Contact Us</string>
    <string name="events_fragment">Events Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="brought_to_you_by">Brought to you by Amazon</string>
    <string name="bitotsav_theme">Play | Pause | Reload</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="timeline_fragment">Timeline Fragment</string>
    <string name="informal_fragment">Informal Fragment</string>
    <string name="flagship_fragment">Flagship Fragment</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="flagship">Flagships</string>
    <string name="t_shirt">Book T-Shirt</string>
    <string name="support">Support Us</string>
    <string name="t_shirt_fragment">T-Shirt Fragment</string>
    <string name="sample_desc">THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample descriptionTHis is just a sample description
        THis is just a sample description</string>
    <string name="instructions">
Hello gamer!!
\n\nThe different packages for registration are as follows:
\n1. OVERALL PACKAGE- Rs.900
\n(includes access to all the day events and the nights+bitotsav t-shirt+wrist band+goodies)
\n\n2.PER DAY REGISTRATION
\n\nDAY 1(HINDI BAND NIGHT-JHANKAAR)- Rs.300
\n(includes access to all the day events of that particular day and the hindi band night+wrist band)
\n\nDAY 2(ENGLISH BAND NIGHT-ELLYSIUM)- Rs.350
\n(includes access to all the day events of that particular day and the english band night+wrist band)
\n\nDAY 3(EDM)- Rs.400
\n(includes access to all the day events of that particular day and the EDM night+wrist band)
\n\nDAY 4(PRO NITE)- Rs.450
\n(includes access to all the day events of that particular day and the pro night+wrist band)
\n\nNOTE:
\n1. For accomodation, one needs to pay Rs.200 extra in which Rs. 100 is security money which will be refunded back once you vacate the room.
\n2. T-shirt can be purchased after a payment of Rs.200 from the registration desk in case one has not taken the overall package.
\n3. If a team/individual wishes to participate only in a particular event, they need to register themselves for that particular day for which the event is scheduled.
\n4. Payment once done will be non-refundable in any circumstances.
    </string>
    <string name="notif_body">The venue has been changed from shor bagh to IC Arena. Please inform everybody as soon as possible. Enjoy!!The venue has been changed from shor bagh to IC Arena. Please inform everybody as soon as possible. Enjoy!!</string>
    <string name="sample_desc_small">THis is just a sample descriptionTHis is just a sample description
        THis is just a sample description</string>
    <string name="todo_dassam">The Dassam Falls is situated at 34 km from the city of Ranchi on Ranchi-Tata road near the Taimara village. The place is also known as Dassam Garh. The major water source of this waterfall is River Kanchi, which falls here from an altitude of 144 feet. The unique feature of this fall is that when the waterfall is seen, 10 water streams are also seen falling.\n</string>
    <string name="todo_jonah">One has to descend 722 steps to admire the surroundings. Water in the falls drops from a height of 43 meters (141 ft). There is a tourist rest house which encloses a Buddhist shrine with a deity of Lord Gautama Buddha. A temple and an ashram dedicated to Buddha were built atop Gautama Pahar by the sons of Raja Baldevdas Birla. A fair is organized in Jonha every Tuesday and Saturday</string>
    <string name="todo_hundru">The Hundru Falls is created on the course of the Subarnarekha River, where it falls from a height of 98 meters (322 ft) creating one of the highest water falls in the state.  At the base of the Hundru Falls, there is a pool, which serves as a bathing place.</string>
    <string name="todo_rock_gardens">A beautiful garden set amidst The Ranchi Lake. This garden is an ideal place for relaxing especially after dawn when the temperature cools down. The lake of the Kanke Dam is located close to the Rock Garden of Ranchi. The place is visited by many people who are attracted to this garden by the endless horizon and the gentle touch of the nature, which can be found here. The Rock Garden is also used as a picnic spot, where large groups of people can spend quality time together</string>
    <string name="todo_ranchi_lake">Located at the base of the majestic Ranchi hill, this lake was constructed in the` year 1842 by a British National Colonel Onsely. It is centrally located and has boating facilities. Being well-maintained by the authorities, this is the perfect spot to enjoy a relaxed evening and is ideal for picnics. The Ranchi hill itself is a popular tourist destination, it also has a Shiva Mandir at its top and one can get a panoramic view of the entire city from there.</string>
    <string name="todo_birsa_zoo">The Jaivik Udyan in Jharkhand is often termed a zoological garden, because of the wide range of animal life that it showcases and it is worth a visit. The wildlife sanctuary of Jaivik Udyan in Jharkhand is especially popular not only in the state but all over the country of India, because of its quite unique collection of a variety of species of mammals.  The Jaivik Udyan in Jharkhand is often termed a zoological garden, because of the wide range of animal life that it showcases and it is worth a visit.</string>
    <string name="todo_tagore_hill"> The first thing you will notice is the graffiti sprayed on huge boulders, followed by a white archway. Once you climb the hill you can see the house where Tagores elder brother stayed. It has been recently renovated by Tagore buffs. The view of the city from the hill top is remarkable. This place is the perfect getaway if you are looking for a peaceful place away from the city noises. There is a Ramakrishna Ashram at the foot of Tagore hill. It is advisable not to venture out here after dark.</string>
    <string name="todo_panch_ghat"> In its bid to find its way through the hard and jagged terrain, the Banai River branches itself out in five different streams, generating ubiquitous singing rivulets through the cluster of rock In spite of the presence of a large number of high waterfalls in the area, the Panchghagh Falls are a tourists preference for being viewed as the safest of all. The water falls from a lesser height, making it safe for tourists to enjoy in the rapid flow of water. Most of the people arrive here for picnic with family and friends. According to plans of the Tourism Department of the Government of Jharkhand, the Panchghagh Waterfalls will soon get a kiosk, a restaurant, toilets, fast-food joints, lighting facilities and a watchtower</string>
    <string name="todo_kanke_dam"> Offsetting the huge, dark boulders of the Gonda hills lies the huge reservoir of the Kanke Dam. This lake is great for fishing and makes a perfect picnic spot.You may climb down the steps leading to the water and take a walk around the lake. Youll find numerous water hyacinths floating on the lakes rim. And if you are feeling slightly famished, there are a number of food vendors around to satisfy your hunger pangs.</string>
    <string name="faq_q_1">Q1. Is it necessary/mandatory to report to the very first day for the collection of passes?</string>
    <string name="faq_a_1">It is not mandatory to report on the very first day. Participants can report on any of 4 days of the fest.</string>
    <string name="faq_q_2">Q2. Can the registration fees be paid on after reaching the campus?</string>
    <string name="faq_a_2">The fees can be paid on reaching the campus but the payment still needs to paid online through the app or by swiping cards. This Bitotsav we go cashless.</string>
    <string name="faq_q_3">Q3. If someone wants to collect the passes the pro nite then is it necessary to come on 20th only ...can the passes be collected before also ?</string>
    <string name="faq_a_3">The passes for the pro night can be collected beforehand as long as all the registration and payment procedures are complete.</string>
    <string name="faq_q_4">Q4.  What is the process of getting a room and what are the charges?</string>
    <string name="faq_a_4">Participants need to register regarding rooms at the info desk. For accommodation one needs to pay Rs.200 extra apart from the registration fees. Rs.100 will be refunded back once the person vacates the room.</string>
    <string name="faq_q_5">Q5.  Can team registration be made without payment ?</string>
    <string name="faq_a_5">Team registration can be made without payment with the condition that the payment procedure is completed before the team participates in its respective events. The team will not be allowed to participate if the payment is incomplete.</string>
    <string name="faq_q_6">Q6.   Is the money refundable in case we have made the payment and fail to turn up ?</string>
    <string name="faq_a_6">The payment once made is non refundable in any case.</string>
    <string name="faq_q_7">Q7.  If someone wants to collect pass for a particular day then is it necessary the he/she should purchase it on that day only ?</string>
    <string name="faq_a_7">No it not necessary to report on that day only. Passes of all the four days will be available at the info desk and passes for any night can be collected anyday from info desk</string>
    <string name="faq_q_8">Q8. Fooding and accommodation facilities in BIT</string>
    <string name="faq_a_8">Hostel accommodation will be provided separately for boys and girls on the first come first served basis. Bitotsav arena will have various food stalls all around the campus added with some avenues in the premium area of BIT. This includes \'HOT n COLD\' and Apni Rasoi in IC Arena, Lakshmi Canteen along the OC Road and Amrit Dhara in Techno. Mess food coupons will be available for purchase. Every hostelhas canteen facilities in the premises.</string>
    <string name="faq_q_9">Q9. Which Day to report?</string>
    <string name="faq_a_9">Participants can report on any of the 4 days of the fest at the INFO DESK for the registration. They must carry a valid college id at all times.</string>
    <string name="faq_q_10">Q10. Can registration be done without payment?</string>
    <string name="faq_a_10">Every person coming to Bitotsav needs to register under the \"single player registration column\" and then any one member from team can register their team under \"multiplayer registration. It is not a compulsion to pay the registration fee at the time of online registration. It can be done later in due time or at the info desk on the day the team arrives at BIT.</string>
</resources>