<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_flagship"
            android:title="@string/flagship" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_register"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_tshirt"
            android:title="@string/t_shirt" />
        <item
            android:id="@+id/nav_contact_about_sponsor"
            android:title="@string/contact_us_sponsors_about_us" />
    </group>

</menu>
